updated hero section, aligned mountains and tree correctly

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -4,7 +4,7 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	filter: saturate(1.5);
+	filter: saturate(1.6);
 	transform: scaleX(-1);
 	width: 100%;
 	height: 100vh;
@@ -16,21 +16,32 @@
 	width: 100%;
 }
 
+.hero-smooth-mountains {
+	left: 100px;
+	height: 100%;
+	bottom: 80px;
+	filter: saturate(1.1);
+}
+
 .hero-trees {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: flex-end;
-	position: absolute;
 	bottom: 0;
 	width: auto;
-	height: 50%;
+	height: 60%;
 	overflow-x: hidden;
 	animation: trees-in 700ms ease-out;
 }
 
+.hero-smooth-mountains,
+.hero-trees {
+	position: absolute;
+}
+
 .tree {
-	height: 80%;
+	height: 85%;
 	filter: brightness(10%) blur(4px);
 }
 
@@ -47,7 +58,7 @@
 		filter: saturate(0.7);
 	}
 	100% {
-		filter: saturate(1.5);
+		filter: saturate(1.6);
 	}
 }
 
@@ -55,7 +66,7 @@
 
 @keyframes trees-in {
 	0% {
-		transform: translateY(290px);
+		transform: translateY(130px);
 	}
 	100% {
 		transform: translateY(0);
